fixes z-index of header-content

--- a/it161/fp/css/main.css
+++ b/it161/fp/css/main.css
@@ -189,6 +189,7 @@ header {
     align-items: center;
     justify-self: center;
     align-self: start;
+    z-index: inherit;
   }
 
 .ff-logo {
